--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random</title>
+    <title>Cara SHOP</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
+    <!-- <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css"> -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css" integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous"/>
+    <script src="https://kit.fontawesome.com/04b9954702.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section id="header">
-        <a href="#"><img src="logo.png" class="logo"></a>
+        <a href="#"><img src="img/logo.png" class="logo"></a>
 
         <div>
             <ul id="navbar">
@@ -29,11 +32,20 @@
                     <a href="contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="cart.html">
-                        <i class="far fa-shopping-bag"></i>
+                    <a ud="lg-bag" href="cart.html">
+                        <i class="fa-solid fa-bag-shopping"></i>
                     </a>
                 </li>
+                <a href="#" id="close">
+                    <i class="fa-solid fa-xmark"></i>
+                </a>
             </ul>
+        </div>
+        <div id="mobile">
+            <a href="cart.html">
+                <i class="fa-solid fa-bag-shopping"></i>
+            </a>
+            <i id="bar" class="fa-solid fa-outdent"></i>
         </div>
     </section>
 
@@ -47,27 +59,27 @@
 
     <section id="feature" class="section-p1">
         <div class="fe-box">
-            <img src="f1.png" alt="">
+            <img src="img/features/f1.png" alt="">
             <h6>Free Shipping</h6>
         </div>
         <div class="fe-box">
-            <img src="f2.png" alt="">
+            <img src="img/features/f2.png" alt="">
             <h6>Online Order</h6>
         </div>
         <div class="fe-box">
-            <img src="f3.png" alt="">
+            <img src="img/features/f3.png" alt="">
             <h6>Save Money</h6>
         </div>
         <div class="fe-box">
-            <img src="f4.png" alt="">
+            <img src="img/features/f4.png" alt="">
             <h6>Promotions</h6>
         </div>
         <div class="fe-box">
-            <img src="f5.png" alt="">
+            <img src="img/features/f5.png" alt="">
             <h6>Happy Sell</h6>
         </div>
         <div class="fe-box">
-            <img src="f6.png" alt="">
+            <img src="img/features/f6.png" alt="">
             <h6>F24/7 Support</h6>
         </div>
     </section>
@@ -90,8 +102,8 @@
                     </div>
                     <h4>$90</h4>
                 </div>
-                <a href="">
-                    <i class="fal fa-shopping-bag cart"></i>
+                <a href="" class="cart">
+                    <i class="fa-solid fa-cart-shopping"></i>
                 </a>
             </div>
             <div class="pro">
@@ -108,8 +120,8 @@
                     </div>
                     <h4>$90</h4>
                 </div>
-                <a href="">
-                    <i class="fal fa-shopping-bag cart"></i>
+                <a href="" class="cart">
+                    <i class="fa-solid fa-cart-shopping"></i>
                 </a>
             </div>
             <div class="pro">
@@ -126,8 +138,8 @@
                     </div>
                     <h4>$90</h4>
                 </div>
-                <a href="">
-                    <i class="fal fa-shopping-bag cart"></i>
+                <a href="" class="cart">
+                    <i class="fa-solid fa-cart-shopping"></i>
                 </a>
             </div>
             <div class="pro">
@@ -144,8 +156,8 @@
                     </div>
                     <h4>$90</h4>
                 </div>
-                <a href="">
-                    <i class="fal fa-shopping-bag cart"></i>
+                <a href="" class="cart">
+                    <i class="fa-solid fa-cart-shopping"></i>
                 </a>
             </div>
             <div class="pro">
@@ -162,8 +174,8 @@
                     </div>
                     <h4>$90</h4>
                 </div>
-                <a href="">
-                    <i class="fal fa-shopping-bag cart"></i>
+                <a href="" class="cart">
+                    <i class="fa-solid fa-cart-shopping"></i>
                 </a>
             </div>
             <div class="pro">
@@ -180,8 +192,8 @@
                     </div>
                     <h4>$90</h4>
                 </div>
-                <a href="">
-                    <i class="fal fa-shopping-bag cart"></i>
+                <a href="" class="cart">
+                    <i class="fa-solid fa-cart-shopping"></i>
                 </a>
             </div>
             <div class="pro">
@@ -198,8 +210,8 @@
                     </div>
                     <h4>$90</h4>
                 </div>
-                <a href="">
-                    <i class="fal fa-shopping-bag cart"></i>
+                <a href="" class="cart">
+                    <i class="fa-solid fa-cart-shopping"></i>
                 </a>
             </div>
             <div class="pro">
@@ -216,8 +228,8 @@
                     </div>
                     <h4>$90</h4>
                 </div>
-                <a href="">
-                    <i class="fal fa-shopping-bag cart"></i>
+                <a href="" class="cart">
+                    <i class="fa-solid fa-cart-shopping"></i>
                 </a>
             </div>
         </div>
@@ -247,8 +259,8 @@
                     </div>
                     <h4>$90</h4>
                 </div>
-                <a href="">
-                    <i class="fal fa-shopping-bag cart"></i>
+                <a href="" class="cart">
+                    <i class="fa-solid fa-cart-shopping"></i>
                 </a>
             </div>
             <div class="pro">
@@ -265,8 +277,8 @@
                     </div>
                     <h4>$90</h4>
                 </div>
-                <a href="">
-                    <i class="fal fa-shopping-bag cart"></i>
+                <a href="" class="cart">
+                    <i class="fa-solid fa-cart-shopping"></i>
                 </a>
             </div>
             <div class="pro">
@@ -283,8 +295,8 @@
                     </div>
                     <h4>$90</h4>
                 </div>
-                <a href="">
-                    <i class="fal fa-shopping-bag cart"></i>
+                <a href="" class="cart">
+                    <i class="fa-solid fa-cart-shopping"></i>
                 </a>
             </div>
             <div class="pro">
@@ -301,8 +313,8 @@
                     </div>
                     <h4>$90</h4>
                 </div>
-                <a href="">
-                    <i class="fal fa-shopping-bag cart"></i>
+                <a href="" class="cart">
+                    <i class="fa-solid fa-cart-shopping"></i>
                 </a>
             </div>
             <div class="pro">
@@ -319,8 +331,8 @@
                     </div>
                     <h4>$90</h4>
                 </div>
-                <a href="">
-                    <i class="fal fa-shopping-bag cart"></i>
+                <a href="" class="cart">
+                    <i class="fa-solid fa-cart-shopping"></i>
                 </a>
             </div>
             <div class="pro">
@@ -337,8 +349,8 @@
                     </div>
                     <h4>$90</h4>
                 </div>
-                <a href="">
-                    <i class="fal fa-shopping-bag cart"></i>
+                <a href="" class="cart">
+                    <i class="fa-solid fa-cart-shopping"></i>
                 </a>
             </div>
             <div class="pro">
@@ -355,8 +367,8 @@
                     </div>
                     <h4>$90</h4>
                 </div>
-                <a href="">
-                    <i class="fal fa-shopping-bag cart"></i>
+                <a href="" class="cart">
+                    <i class="fa-solid fa-cart-shopping"></i>
                 </a>
             </div>
             <div class="pro">
@@ -373,8 +385,8 @@
                     </div>
                     <h4>$90</h4>
                 </div>
-                <a href="">
-                    <i class="fal fa-shopping-bag cart"></i>
+                <a href="" class="cart"> 
+                    <i class="fa-solid fa-cart-shopping"></i>
                 </a>
             </div>
         </div>
@@ -385,15 +397,95 @@
             <h4>crazy deals</h4>
             <h2>buy 1 get 1 free</h2>
             <span>The best classic dress is on sale at cara</span>
-            <button>Learn More</button>
+            <button class="white">Learn More</button>
         </div>
-        <div class="banner-box">
-            <h4>crazy deals</h4>
-            <h2>buy 1 get 1 free</h2>
+        <div class="banner-box banner-box2">
+            <h4>spring/summer</h4>
+            <h2>upcoming season</h2>
             <span>The best classic dress is on sale at cara</span>
-            <button>Learn More</button>
+            <button class="white">Collection</button>
         </div>
     </section>
+
+    <section id="banner3">
+        <div class="banner-box">
+            <h2>SEASONAL SALE</h2>
+            <h3>Winter Collection -50% OFF</h3>
+        </div>
+        <div class="banner-box banner-box2">
+            <h2>NEW FOOTWEAR COLLECTIONS</h2>
+            <h3>Spring/Summer 2024</h3>
+        </div>
+        <div class="banner-box banner-box3">
+            <h2>T-SHIRTS</h2>
+            <h3>New Trendy Prints</h3>
+        </div>
+    </section>
+
+    <section id="newsletter" class="section-p1 section-m1">
+        <div class="newstext">
+            <h4>Sign Up For Newsletters</h4>
+            <p>Get E-mail updates about our latest shop and <span>special offers.</span></p>
+        </div>
+        <div class="form">
+            <input type="text" placeholder="Your E-mail address">
+            <button class="normal">Sign Up</button>
+        </div>
+    </section>
+
+    <footer class="section-p1">
+        <div class="col">
+            <img src="img/logo.png" alt="">
+            <h4>Contact</h4>
+            <p><strong>Address: </strong> Institut Teknologi Kalimantan </p>
+            <p><strong>Phone: </strong> +62 878-7496-4612 </p>
+            <p><strong>Hours: </strong> 07.30 - 16.00 Mon - Fri </p>
+            <div class="follow">
+                <h4>Follow Us</h4>
+                <div class="icon">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-pinterest"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <h4>About</h4>
+            <a href="#">About Us</a>
+            <a href="#">Delivery Information</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Contact Us</a>
+        </div>
+
+        <div class="col">
+            <h4>My Account</h4>
+            <a href="#">Sign In</a>
+            <a href="#">View Cart</a>
+            <a href="#">My Wishlist</a>
+            <a href="#">Track My Order</a>
+            <a href="#">Help</a>
+        </div>
+
+        <div class="col install">
+            <h4>Install App</h4>
+            <p>From App Store or Google Play Store</p>
+            <div class="row">
+                <img src="img/pay/app.jpg" alt="">
+                <img src="img/pay/play.jpg" alt="">
+            </div>
+            <p>Secured Payment Gateway</p>
+            <img src="img/pay/pay.png" alt="">
+        </div>
+
+        <div class="copyright">
+            <p>@ 2023, Sistem Informasi - ITK</p>
+        </div>
+
+    </footer>
 
     <script src="logic.js"></script>
 </body>
