--- a/figthingforpemstruk/index.html
+++ b/figthingforpemstruk/index.html
@@ -7,6 +7,28 @@
     <title>Fighting</title>
 </head>
 <body>
+    <!-- container -->
+    <div id="container-canvas"> 
+        <!-- smallcontainer-canvas -->
+        <div id="smallcontainer-canvas">
+            <!-- player health -->
+            <div id="player">
+                <div class="player-health"></div>
+                <div class="player-health2"></div>
+            </div>
+            <!-- timer -->
+            <div class="timer">
+                10
+            </div>
+            <!-- enemy health -->
+            <div id="enemy">
+                <div class="enemy-health"></div>
+                <div class="enemy-health2"></div>
+            </div>
+        </div>
+        <div class="displaytext">Tie</div>
+        <canvas></canvas>
+    </div>
     <script src="logic.js"></script>
 </body>
 </html>
