--- a/figthingforpemstruk/index.html
+++ b/figthingforpemstruk/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Fighting</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <title>Pixelated Punch-Up</title>
 </head>
 <body>
     <!-- container -->
@@ -29,6 +32,8 @@
         <div class="displaytext">Tie</div>
         <canvas></canvas>
     </div>
+    <script src="assets/js/class.js"></script>
+    <script src="assets/js/utility.js"></script>
     <script src="logic.js"></script>
 </body>
 </html>
