--- a/figthingforpemstruk/index.html
+++ b/figthingforpemstruk/index.html
@@ -15,7 +15,7 @@
         <!-- smallcontainer-canvas -->
         <div id="smallcontainer-canvas">
             <!-- player health -->
-            <div id="player">
+            <div id="player"
                 <div class="player-health"></div>
                 <div class="player-health2"></div>
             </div>
